# devpulse

./: .gitignore  CMakeLists.txt  README.md  Service.h  main.cpp  mainwindow.cpp  mainwindow.h
.github/workflows/: ci.yml
plugins/ping_checker/: CMakeLists.txt  PingCheckerPlugin.cpp  PingCheckerPlugin.h
src/: main.cpp
src/core/: Service.h  monitorengine.cpp  monitorengine.h  prometheusserver.cpp  prometheusserver.h  servicerepository.cpp  servicerepository.h  webhookalerter.cpp  webhookalerter.h
src/core/checkers/: IChecker.h  checkerfactory.cpp  checkerfactory.h  httpchecker.cpp  httpchecker.h  tcpchecker.cpp  tcpchecker.h
src/core/monitoring/: incidenttracker.cpp  incidenttracker.h  latencystore.cpp  latencystore.h  uptimetracker.cpp  uptimetracker.h
src/core/plugins/: ICheckerPlugin.h  PluginLoader.cpp  PluginLoader.h
src/core/storage/: databasemanager.cpp  databasemanager.h  jsonprofilemanager.cpp  jsonprofilemanager.h
src/models/: logmodel.cpp  logmodel.h  servicetablemodel.cpp  servicetablemodel.h
src/ui/: incidentpanel.cpp  incidentpanel.h  latencygraphwidget.cpp  latencygraphwidget.h  logpanelwidget.cpp  logpanelwidget.h  mainwindow.cpp  mainwindow.h  traymanager.cpp  traymanager.h
src/ui/dialogs/: addservicedialog.cpp  addservicedialog.h
tests/: CMakeLists.txt  test_latencystore.cpp  test_service.cpp  test_servicerepository.cpp  test_uptimetracker.cpp
